--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -18,8 +18,8 @@ add_subdirectory(LibMath)
 # TODO: Add Mono
 #add_subdirectory(mono)
 
-# Add PugiXML
-add_subdirectory(PugiXML)
+# Add RapidJSON
+add_subdirectory(RapidJSON)
 
 # Add SoLoud
 add_subdirectory(SoLoud)
@@ -43,8 +43,7 @@ set(LIBMATH_INCLUDE_DIR ${LIBMATH_INCLUDE_DIR} PARENT_SCOPE)
 set(MONO_LIBS ${MONO_LIBRARIES} PARENT_SCOPE)
 set(MONO_INCLUDE_DIRS ${MONO_INCLUDE_DIRS} PARENT_SCOPE)
 
-set(PUGIXML_NAME ${PUGIXML_NAME} PARENT_SCOPE)
-set(PUGIXML_INCLUDE_DIR ${PUGIXML_INCLUDE_DIR} PARENT_SCOPE)
+set(RAPIDJSON_INCLUDE_DIR ${PUGIXML_INCLUDE_DIR} PARENT_SCOPE)
 
 set(SOLOUD_NAME ${SOLOUD_NAME} PARENT_SCOPE)
 set(SOLOUD_INCLUDE_DIR ${SOLOUD_INCLUDE_DIR} PARENT_SCOPE)
