--- a/Dependencies/GLFW/CMakeLists.txt
+++ b/Dependencies/GLFW/CMakeLists.txt
@@ -6,7 +6,7 @@ FetchContent_Declare(
 	GIT_SHALLOW ON
 )
 
-set(BUILD_SHARED_LIBS ON)
+set(BUILD_SHARED_LIBS OFF)
 set(GLFW_INSTALL OFF)
 set(GLFW_BUILD_EXAMPLES OFF)
 set(GLFW_BUILD_TESTS OFF)
