--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -43,7 +43,7 @@ set(LIBMATH_INCLUDE_DIR ${LIBMATH_INCLUDE_DIR} PARENT_SCOPE)
 set(MONO_LIBS ${MONO_LIBRARIES} PARENT_SCOPE)
 set(MONO_INCLUDE_DIRS ${MONO_INCLUDE_DIRS} PARENT_SCOPE)
 
-set(RAPIDJSON_INCLUDE_DIR ${PUGIXML_INCLUDE_DIR} PARENT_SCOPE)
+set(RAPIDJSON_INCLUDE_DIR ${RAPIDJSON_INCLUDE_DIR} PARENT_SCOPE)
 
 set(SOLOUD_NAME ${SOLOUD_NAME} PARENT_SCOPE)
 set(SOLOUD_INCLUDE_DIR ${SOLOUD_INCLUDE_DIR} PARENT_SCOPE)
