Added zstd, brotli and lz4

--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -3,6 +3,9 @@ include(FetchContent)
 # Add assimp
 add_subdirectory(Assimp)
 
+# Add Brotli
+add_subdirectory(brotli)
+
 # Add Bullet
 add_subdirectory(bullet3)
 
@@ -15,6 +18,9 @@ add_subdirectory(GLFW)
 # Add LibMath
 add_subdirectory(LibMath)
 
+# Add lz4
+add_subdirectory(lz4)
+
 # TODO: Add Mono
 #add_subdirectory(mono)
 
@@ -24,12 +30,18 @@ add_subdirectory(RapidJSON)
 # Add SoLoud
 add_subdirectory(SoLoud)
 
+# Add zstd
+add_subdirectory(zstd)
+
 # Set shared variables
 set(ASSIMP_NAME ${ASSIMP_NAME} PARENT_SCOPE)
 set(ASSIMP_INCLUDE_DIR ${ASSIMP_INCLUDE_DIR} PARENT_SCOPE)
 
 set(BULLET_LIBS ${BULLET_LIBRARIES} PARENT_SCOPE)
 set(BULLET_INCLUDE_DIR ${BULLET_INCLUDE_DIR} PARENT_SCOPE)
+
+set(BROTLI_LIBS ${BROTLI_LIBRARIES} PARENT_SCOPE)
+set(BROTLI_INCLUDE_DIRS ${BROTLI_INCLUDE_DIRS} PARENT_SCOPE)
 
 set(GLAD_NAME ${GLAD_NAME} PARENT_SCOPE)
 set(GLAD_INCLUDE_DIR ${GLAD_INCLUDE_DIR} PARENT_SCOPE)
@@ -40,6 +52,9 @@ set(GLFW_INCLUDE_DIR ${GLFW_INCLUDE_DIR} PARENT_SCOPE)
 set(LIBMATH_NAME ${LIBMATH_NAME} PARENT_SCOPE)
 set(LIBMATH_INCLUDE_DIR ${LIBMATH_INCLUDE_DIR} PARENT_SCOPE)
 
+set(LZ4_NAME ${LZ4_NAME} PARENT_SCOPE)
+set(LZ4_INCLUDE_DIR ${LZ4_INCLUDE_DIR} PARENT_SCOPE)
+
 set(MONO_LIBS ${MONO_LIBRARIES} PARENT_SCOPE)
 set(MONO_INCLUDE_DIRS ${MONO_INCLUDE_DIRS} PARENT_SCOPE)
 
@@ -49,3 +64,6 @@ set(SOLOUD_NAME ${SOLOUD_NAME} PARENT_SCOPE)
 set(SOLOUD_INCLUDE_DIR ${SOLOUD_INCLUDE_DIR} PARENT_SCOPE)
 
 set(STB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/STB PARENT_SCOPE)
+
+set(ZSTD_NAME ${ZSTD_NAME} PARENT_SCOPE)
+set(ZSTD_INCLUDE_DIR ${ZSTD_INCLUDE_DIR} PARENT_SCOPE)
