--- a/Source/Engine/Core/CMakeLists.txt
+++ b/Source/Engine/Core/CMakeLists.txt
@@ -37,10 +37,15 @@ source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${HEADER_FILES} ${SOURCE_FIL
 
 add_library(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
 
-include_directories(${PROJECT_INCLUDE_DIR} ${RAPIDJSON_INCLUDE_DIR} ${STB_INCLUDE_DIR} ${LIBMATH_INCLUDE_DIR} ${ASSIMP_INCLUDE_DIR})
+include_directories(${PROJECT_INCLUDE_DIR}
+	${RAPIDJSON_INCLUDE_DIR} ${STB_INCLUDE_DIR} ${LIBMATH_INCLUDE_DIR} ${ASSIMP_INCLUDE_DIR}
+	${ZSTD_INCLUDE_DIR} ${BROTLI_INCLUDE_DIRS} ${LZ4_INCLUDE_DIR}
+)
+
 target_link_libraries(${PROJECT_NAME}
-    PRIVATE
+	PRIVATE
 	${LIBMATH_NAME} ${ASSIMP_NAME}
+	${ZSTD_NAME} ${BROTLI_LIBS} ${LZ4_NAME}
 )
 
 if(MSVC)
