--- a/Source/API/PantheonEngine/PantheonEngine.csproj
+++ b/Source/API/PantheonEngine/PantheonEngine.csproj
@@ -40,6 +40,7 @@
     <ItemGroup>
         <Compile Include="Core\Debug.cs" />
         <Compile Include="Core\EngineLibs.cs" />
+        <Compile Include="Core\Time.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
