Moved assimp related projects into a subfolder

--- a/Dependencies/Assimp/CMakeLists.txt
+++ b/Dependencies/Assimp/CMakeLists.txt
@@ -11,6 +11,8 @@ set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
 set(BUILD_SHARED_LIBS OFF)
 set(ASSIMP_BUILD_TESTS OFF)
 
+set(CMAKE_FOLDER ${CMAKE_FOLDER}/assimp)
+
 FetchContent_MakeAvailable(assimp)
 
 set(ASSIMP_NAME assimp PARENT_SCOPE)
