--- a/Source/Engine/CMakeLists.txt
+++ b/Source/Engine/CMakeLists.txt
@@ -33,6 +33,11 @@ list(APPEND ENGINE_INCLUDE_DIRS ${UI_INCLUDE_DIR})
 list(APPEND ENGINE_TARGETS ${APP_NAME})
 list(APPEND ENGINE_INCLUDE_DIRS ${APP_INCLUDE_DIR})
 
+# Scripting
+#add_subdirectory(Scripting)
+list(APPEND ENGINE_TARGETS ${SCRIPTING_NAME})
+list(APPEND ENGINE_INCLUDE_DIRS ${SCRIPTING_INCLUDE_DIR})
+
 message(STATUS "ENGINE_TARGETS: ${ENGINE_TARGETS}")
 message(STATUS "ENGINE_INCLUDE_DIRS: ${ENGINE_INCLUDE_DIRS}")
 
