--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,5 +1,9 @@
 set(BASE_FOLDER ${CMAKE_FOLDER})
 
+if (MSVC)
+  add_compile_options(/Zc:preprocessor)
+endif()
+
 set(CMAKE_FOLDER ${BASE_FOLDER}/Engine)
 add_subdirectory(Engine)
 
