Reworked project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,6 @@ add_subdirectory(Dependencies)
 set(CMAKE_FOLDER Pantheon)
 add_subdirectory(Source)
 
-if (MSVC)
-	set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Editor)
+if (MSVC AND DEFINED STARTUP_PROJECT)
+	set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${STARTUP_PROJECT})
 endif()
