Added window tests & fixed window issues

--- a/Source/Engine/App/CMakeLists.txt
+++ b/Source/Engine/App/CMakeLists.txt
@@ -38,7 +38,7 @@ source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${PROJECT_FILES})
 add_library(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
 
 include_directories(${PROJECT_INCLUDE_DIR}
-    ${GLAD_INCLUDE_DIR} ${GLFW_INCLUDE_DIR}
+    ${GLAD_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${LIBMATH_INCLUDE_DIR}
     ${CORE_INCLUDE_DIR} ${RENDERING_INCLUDE_DIR}
 )
 
@@ -46,6 +46,7 @@ target_link_libraries(${PROJECT_NAME}
     PRIVATE
 	${GLAD_NAME}
 	${GLFW_NAME}
+	${LIBMATH_NAME}
 	${CORE_NAME}
 	${RENDERING_NAME}
 )
