Reworked brotli dependency cmake
- Disabled brotli tests
- Enabled bundled mode

--- a/Dependencies/brotli/CMakeLists.txt
+++ b/Dependencies/brotli/CMakeLists.txt
@@ -10,7 +10,9 @@ set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
 
 set(BUILD_SHARED_LIBS OFF)
 set(BUILD_TESTING OFF)
+set(BROTLI_DISABLE_TESTS ON)
 set(BROTLI_EMSCRIPTEN ON) # Hack to disable shared libs
+set(BROTLI_BUNDLED_MODE ON)
 
 set(CMAKE_FOLDER ${CMAKE_FOLDER}/brotli)
 
