--- a/Source/Engine/Core/CMakeLists.txt
+++ b/Source/Engine/Core/CMakeLists.txt
@@ -1,6 +1,6 @@
-# set the project name
+# set the target name
 get_filename_component(CURRENT_FOLDER_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
-set(PROJECT_NAME Pantheon${CURRENT_FOLDER_NAME})
+set(TARGET_NAME Pantheon${CURRENT_FOLDER_NAME})
 
 
 ###############################
@@ -10,7 +10,7 @@ set(PROJECT_NAME Pantheon${CURRENT_FOLDER_NAME})
 ###############################
 
 # Add source files
-file(GLOB_RECURSE SOURCE_FILES 
+file(GLOB_RECURSE SOURCE_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/*.c
 	${CMAKE_CURRENT_SOURCE_DIR}/*.cc # C with class
 	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
@@ -19,8 +19,8 @@ file(GLOB_RECURSE SOURCE_FILES
 )
 
 # Add header files
-set(PROJECT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
-file(GLOB_RECURSE HEADER_FILES 
+set(TARGET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
+file(GLOB_RECURSE HEADER_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/*.h
 	${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
 	${CMAKE_CURRENT_SOURCE_DIR}/*.inl
@@ -35,24 +35,24 @@ source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${HEADER_FILES} ${SOURCE_FIL
 #                             #
 ###############################
 
-add_library(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
+add_library(${TARGET_NAME} ${HEADER_FILES} ${SOURCE_FILES})
 
-include_directories(${PROJECT_INCLUDE_DIR}
-	${RAPIDJSON_INCLUDE_DIR} ${STB_INCLUDE_DIR} ${LIBMATH_INCLUDE_DIR} ${ASSIMP_INCLUDE_DIR}
+target_include_directories(${TARGET_NAME} PRIVATE ${TARGET_INCLUDE_DIR}
+	${RAPIDJSON_INCLUDE_DIR} ${LIBMATH_INCLUDE_DIR}
 	${ZSTD_INCLUDE_DIR} ${BROTLI_INCLUDE_DIRS} ${LZ4_INCLUDE_DIR}
 )
 
-target_link_libraries(${PROJECT_NAME}
+target_link_libraries(${TARGET_NAME}
 	PRIVATE
 	${LIBMATH_NAME} ${ASSIMP_NAME}
 	${ZSTD_NAME} ${BROTLI_LIBS} ${LZ4_NAME}
 )
 
 if(MSVC)
-  target_compile_options(${PROJECT_NAME} PRIVATE /W4 /WX)
+	target_compile_options(${TARGET_NAME} PRIVATE /W4 /WX)
 else()
-  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
+	target_compile_options(${TARGET_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
 endif()
 
-set(CORE_NAME ${PROJECT_NAME} PARENT_SCOPE)
-set(CORE_INCLUDE_DIR ${PROJECT_INCLUDE_DIR} PARENT_SCOPE)
+set(CORE_NAME ${TARGET_NAME} PARENT_SCOPE)
+set(CORE_INCLUDE_DIR ${TARGET_INCLUDE_DIR} PARENT_SCOPE)
