--- a/Dependencies/GLAD/CMakeLists.txt
+++ b/Dependencies/GLAD/CMakeLists.txt
@@ -1,6 +1,6 @@
-# set the project name
+# set the target name
 get_filename_component(CURRENT_FOLDER_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
-set(PROJECT_NAME ${CURRENT_FOLDER_NAME})
+set(TARGET_NAME ${CURRENT_FOLDER_NAME})
 
 
 ###############################
@@ -16,9 +16,9 @@ file(GLOB_RECURSE SOURCE_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/*.cxx
 	${CMAKE_CURRENT_SOURCE_DIR}/*.c++)
-	
+
 # Add header files
-set(PROJECT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
+set(TARGET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 file(GLOB_RECURSE HEADER_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/*.h
 	${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
@@ -33,13 +33,14 @@ source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${HEADER_FILES} ${SOURCE_FIL
 #                             #
 ###############################
 
-add_library(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})
-include_directories(${PROJECT_INCLUDE_DIR})
+add_library(${TARGET_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})
+target_include_directories(${TARGET_NAME} PRIVATE ${TARGET_INCLUDE_DIR})
+
 if(MSVC)
-  target_compile_options(${PROJECT_NAME} PRIVATE /W4 /WX)
+	target_compile_options(${TARGET_NAME} PRIVATE /W4 /WX)
 else()
-  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
+	target_compile_options(${TARGET_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
 endif()
 
-set(GLAD_NAME ${PROJECT_NAME} PARENT_SCOPE)
-set(GLAD_INCLUDE_DIR ${PROJECT_INCLUDE_DIR} PARENT_SCOPE)
+set(GLAD_NAME ${TARGET_NAME} PARENT_SCOPE)
+set(GLAD_INCLUDE_DIR ${TARGET_INCLUDE_DIR} PARENT_SCOPE)
