--- a/Source/Engine/Rendering/CMakeLists.txt
+++ b/Source/Engine/Rendering/CMakeLists.txt
@@ -1,6 +1,6 @@
-# set the project name
+# set the target name
 get_filename_component(CURRENT_FOLDER_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
-set(PROJECT_NAME Pantheon${CURRENT_FOLDER_NAME})
+set(TARGET_NAME Pantheon${CURRENT_FOLDER_NAME})
 
 
 ###############################
@@ -19,7 +19,7 @@ file(GLOB_RECURSE SOURCE_FILES
 )
 
 # Add header files
-set(PROJECT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
+set(TARGET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 file(GLOB_RECURSE HEADER_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/*.h
 	${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
@@ -35,24 +35,25 @@ source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${HEADER_FILES} ${SOURCE_FIL
 #                             #
 ###############################
 
-add_library(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
+add_library(${TARGET_NAME} ${HEADER_FILES} ${SOURCE_FILES})
 
-include_directories(${PROJECT_INCLUDE_DIR}
-	${GLAD_INCLUDE_DIR} ${LIBMATH_INCLUDE_DIR}
-	${CORE_INCLUDE_DIR})
+target_include_directories(${TARGET_NAME} PRIVATE ${TARGET_INCLUDE_DIR}
+	${GLAD_INCLUDE_DIR} ${LIBMATH_INCLUDE_DIR} ${ASSIMP_INCLUDE_DIR} ${RAPIDJSON_INCLUDE_DIR} ${STB_INCLUDE_DIR}
+	${CORE_INCLUDE_DIR}
+)
 
-target_link_libraries(${PROJECT_NAME}
-    PRIVATE
+target_link_libraries(${TARGET_NAME}
+	PRIVATE
 	${GLAD_NAME}
 	${LIBMATH_NAME}
 	${CORE_NAME}
 )
 
 if(MSVC)
-  target_compile_options(${PROJECT_NAME} PRIVATE /W4 /WX)
+	target_compile_options(${TARGET_NAME} PRIVATE /W4 /WX)
 else()
-  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
+	target_compile_options(${TARGET_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
 endif()
 
-set(RENDERING_NAME ${PROJECT_NAME} PARENT_SCOPE)
-set(RENDERING_INCLUDE_DIR ${PROJECT_INCLUDE_DIR} PARENT_SCOPE)
+set(RENDERING_NAME ${TARGET_NAME} PARENT_SCOPE)
+set(RENDERING_INCLUDE_DIR ${TARGET_INCLUDE_DIR} PARENT_SCOPE)
