--- a/Source/Engine/UI/CMakeLists.txt
+++ b/Source/Engine/UI/CMakeLists.txt
@@ -1,6 +1,6 @@
-# set project
+# set target
 get_filename_component(CURRENT_FOLDER_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
-set(PROJECT_NAME Pantheon${CURRENT_FOLDER_NAME})
+set(TARGET_NAME Pantheon${CURRENT_FOLDER_NAME})
 
 
 ###############################
@@ -10,17 +10,17 @@ set(PROJECT_NAME Pantheon${CURRENT_FOLDER_NAME})
 ###############################
 
 # Add source files
-file(GLOB_RECURSE SOURCE_FILES 
+file(GLOB_RECURSE SOURCE_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/*.c
 	${CMAKE_CURRENT_SOURCE_DIR}/*.cc # C with classe
 	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/*.cxx
 	${CMAKE_CURRENT_SOURCE_DIR}/*.c++
 )
-	
+
 # Add header files
-set(PROJECT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
-file(GLOB_RECURSE HEADER_FILES 
+set(TARGET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
+file(GLOB_RECURSE HEADER_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/*.h
 	${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
 	${CMAKE_CURRENT_SOURCE_DIR}/*.inl
@@ -35,20 +35,23 @@ source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${HEADER_FILES} ${SOURCE_FIL
 #                             #
 ###############################
 
-add_library(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
+add_library(${TARGET_NAME} ${HEADER_FILES} ${SOURCE_FILES})
 
-include_directories(${PROJECT_INCLUDE_DIR} ${LIBMATH_INCLUDE_DIR} ${CORE_INCLUDE_DIR} ${RENDERING_INCLUDE_DIR})
-target_link_libraries(${PROJECT_NAME}
-    PRIVATE
+target_include_directories(${TARGET_NAME} PRIVATE ${TARGET_INCLUDE_DIR}
+	${LIBMATH_INCLUDE_DIR} ${CORE_INCLUDE_DIR} ${RENDERING_INCLUDE_DIR}
+)
+
+target_link_libraries(${TARGET_NAME}
+	PRIVATE
 	${LIBMATH_NAME}
 	${CORE_NAME} ${RENDERING_NAME}
 )
 
 if(MSVC)
-  target_compile_options(${PROJECT_NAME} PRIVATE /W4 /WX)
+	target_compile_options(${TARGET_NAME} PRIVATE /W4 /WX)
 else()
-  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
+	target_compile_options(${TARGET_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
 endif()
 
-set(UI_NAME ${PROJECT_NAME} PARENT_SCOPE)
-set(UI_INCLUDE_DIR ${PROJECT_INCLUDE_DIR} PARENT_SCOPE)
+set(UI_NAME ${TARGET_NAME} PARENT_SCOPE)
+set(UI_INCLUDE_DIR ${TARGET_INCLUDE_DIR} PARENT_SCOPE)
