--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,8 @@ jobs:
           -DCMAKE_BUILD_TYPE=${{ matrix.type }}
           -DCMAKE_CXX_COMPILER=${{ matrix.info.cxx }}
           -DCMAKE_C_COMPILER=${{ matrix.info.cc }}
+          -DPANTHEON_BUILD_TEST=ON
       - name: Build
         run: cmake --build "${{ github.workspace }}/build" --config ${{ matrix.type }}
       - name: Test
-        run: ctest --output-on-failure --test-dir "${{ github.workspace }}/build"
+        run: ctest --output-on-failure --test-dir "${{ github.workspace }}/build" -C ${{ matrix.type }}
