Made test and editor copy resources on build

--- a/Source/Test/CMakeLists.txt
+++ b/Source/Test/CMakeLists.txt
@@ -66,4 +66,6 @@ add_test(
 	COMMAND $<TARGET_FILE:${TARGET_NAME}>
 )
 
+copy_resources(${TARGET_NAME})
+
 set(TEST_NAME ${TARGET_NAME} PARENT_SCOPE)
