--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,20 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/Engine)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib/Engine)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib/Engine)
 
+# Add module folder
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMake)
+
 enable_testing()
+
+set(PANTHEON_ASSETS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Resources)
+include(CopyResources)
 
 set(CMAKE_FOLDER deps)
 add_subdirectory(Dependencies)
 
 set(CMAKE_FOLDER Pantheon)
 add_subdirectory(Source)
+add_subdirectory(Resources)
 
 if (MSVC AND DEFINED STARTUP_PROJECT)
 	set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${STARTUP_PROJECT})
